Add title to the direction checkbox

--- a/src/app/currency-converter/currency-converter.component.html
+++ b/src/app/currency-converter/currency-converter.component.html
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <label class="form-label image-box">
+    <label class="form-label image-box"  title="Direction of the conversion. Click to change">
       <input type="checkbox" [(ngModel)]="from">
       <img src="assets/icons8-arrow-50.png">
     </label>
